--- a/progettoRistorante/App.config
+++ b/progettoRistorante/App.config
@@ -10,6 +10,9 @@
             <setting name="NumeroTavoli" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="NumeroFornelli" serializeAs="String">
+                <value>0</value>
+            </setting>
         </progettoRistorante.Properties.Settings>
     </userSettings>
 </configuration>
