--- a/progettoRistorante/Properties/Settings.settings
+++ b/progettoRistorante/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="NumeroTavoli" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="NumeroFornelli" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
