--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@
 /.vs/progettoRistorante/FileContentIndex/83169219-3631-4f71-a328-7c9784e20536.vsidx
 /.vs/progettoRistorante/FileContentIndex/82b55836-7f2a-4e69-82d8-27d51a603785.vsidx
 /.vs/progettoRistorante/FileContentIndex
+/.vs/slnx.sqlite
